@@ -35,6 +35,8 @@
 	- configure.in builds up LIBS by appending (Benedict Lofstedt)
 	- rpm2cpio reported wrong zlib error string
 	- removed \n from (none) generated by query format code
+	- queries of fssizes w/o fsnames didn't work (Till Bubeck)
+	- added --noorder option to skip package reordering (Elliot Lee)
 
 2.4.2 -> 2.4.3:
 	- implemented install time prerequisites
